--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1 id="header">Рецепт блинов</h1>
-    <h3><a href="https://eda.ru/recepty/zavtraki/vozdushnie-tonkie-blini-na-moloke-36589">Рецепт был взят с</a></h3>
+    <h3><a href="https://eda.ru/recepty/zavtraki/vozdushnie-tonkie-blini-na-moloke-36589" target="_blank" rel="noopener noreferrer">Рецепт был взят с</a></h3>
     <img  src="https://eda.ru/images/RecipeStep/651x442/vozdushnie-tonkie-blini-na-moloke_36589_step_4.webp" alt="receipt of pancakes">
     <h2>Описание</h2>
   <p>Блины-блюдо русской кухни, выпекаемое из жидкого дрожжевого теста на сковороде. Подаются горячими с растопленным сливочным маслом (или сметаной). Также могут быть поданы с икрой, солёной (копчёной) рыбой и любым другим гарниром по желанию.</p>
@@ -32,7 +32,7 @@
         <li>На сильно раскаленную сковороду налить немного масла и жарить блины.
         </ol>
    </div> 
-   <h3><a href="https://eda.ru/">Больше рецептов</a></h3>
+   <h3><a href="https://eda.ru/" target="_blank" rel="noopener noreferrer">Больше рецептов</a></h3>
     <h3><a href="#header">Вернуться в начало</a></h3>
     <h1>Как правильно готовить пельмени?</h1>
     <img src="https://eda.ru/img/eda/c978x525/s1.eda.ru/StaticContent/Photos/Article/Orig/kak-pravilno-varit-pelmeni.jpg" alt="Аппетитные пельмени">
@@ -73,7 +73,7 @@
             <li>Подавайте пельмени с любимым соусом.</li>
         </ul>
     </div>
-    <h3><a href="https://eda.ru/">Больше рецептов</a></h3>
+    <h3><a href="https://eda.ru/" target="_blank" rel="noopener noreferrer">Больше рецептов</a></h3>
     <h3><a href="#header">Вернуться в начало</a></h3>
 </body>
 </html>
